# app/Http/Controllers/Employees/EmployeesController.php
@@ -29,6 +29,7 @@ class EmployeesController extends Controller
      *     path="/api/employees",
      *     summary="Buscar todas os funcionários",
      *     tags={"Funcionários"},
+     *     security={{ "bearerAuth": {} }},
      *
      *     @OA\Response(
      *         response=200,
@@ -68,6 +69,7 @@ class EmployeesController extends Controller
      *     path="/api/employees",
      *     summary="Criar novo funcionário",
      *     tags={"Funcionários"},
+     *     security={{ "bearerAuth": {} }},
      *
      *     @OA\RequestBody(
      *         required=true,
@@ -108,6 +110,7 @@ class EmployeesController extends Controller
      *     path="/api/employees/{parking_id}/{employees_id}",
      *     summary="Buscar funcionário por ID do estacionamento e ID do funcionário",
      *     tags={"Funcionários"},
+     *     security={{ "bearerAuth": {} }},
      *
      *     @OA\Parameter(
      *         name="parking_id",
@@ -153,6 +156,7 @@ class EmployeesController extends Controller
      *     path="/api/employees/{parking_id}/{employees_id}",
      *     summary="Atualizar funcionário por ID do estacionamento e ID do funcionário",
      *     tags={"Funcionários"},
+     *     security={{ "bearerAuth": {} }},
      *
      *     @OA\Parameter(
      *         name="parking_id",
@@ -217,6 +221,7 @@ class EmployeesController extends Controller
      *     path="/api/employees/{parking_id}/{employees_id}",
      *     summary="Deletar funcionário por ID do estacionamento e ID do funcionário",
      *     tags={"Funcionários"},
+     *     security={{ "bearerAuth": {} }},
      *
      *     @OA\Parameter(
      *         name="parking_id",
