# app/Http/Controllers/Parking/ParkingController.php
@@ -16,6 +16,7 @@ use Illuminate\Http\Response;
  * @OA\Tag(
  *     name="Estacionamento",
  *     description="API endpoints de estacionamentos"
+ *
  * )
  */
 class ParkingController extends Controller
@@ -29,6 +30,7 @@ class ParkingController extends Controller
      *     path="/api/parking",
      *     summary="Buscar todas as informações",
      *     tags={"Estacionamento"},
+     *     security={{ "bearerAuth": {} }},
      *
      *     @OA\Response(
      *         response=200,
@@ -68,6 +70,7 @@ class ParkingController extends Controller
      *     path="/api/parking",
      *     summary="Criar novo estacionamento",
      *     tags={"Estacionamento"},
+     *     security={{ "bearerAuth": {} }},
      *
      *     @OA\RequestBody(
      *         required=true,
@@ -105,6 +108,7 @@ class ParkingController extends Controller
      *     path="/api/parking/{id}",
      *     summary="Buscar estacionamento pelo id",
      *     tags={"Estacionamento"},
+     *     security={{ "bearerAuth": {} }},
      *
      *     @OA\Parameter(
      *         name="id",
@@ -141,6 +145,7 @@ class ParkingController extends Controller
      *     path="/api/parking/{id}",
      *     summary="Atualizar estacionamento pelo id",
      *     tags={"Estacionamento"},
+     *     security={{ "bearerAuth": {} }},
      *
      *     @OA\Parameter(
      *         name="id",
@@ -193,6 +198,7 @@ class ParkingController extends Controller
      *     path="/api/parking/{id}",
      *     summary="Deletar por ID",
      *     tags={"Estacionamento"},
+     *     security={{ "bearerAuth": {} }},
      *
      *     @OA\Parameter(
      *         name="id",
